# BOB-ROV-Motor-Controller

./: .gitignore  CMakeLists.txt  Cargo.toml  arm-none-eabi-toolchain.cmake  readme.md  rust-toolchain.toml
.cargo/: config.toml
Core/Inc/: dshot.h  spi.h  utils.h
Core/Src/: dshot.c  main.c  spi.c
motor-controller/: Cargo.toml
motor-controller/src/: config.rs  core0.rs  core1.rs  dshot.rs  main.rs  spi.rs  telemetry.rs
rp2040-dshot/: Cargo.toml  README.md
rp2040-dshot/src/: driver.rs  encoder.rs  lib.rs  program.rs
rp2040-dshot/tests/: encoder.rs
