[workspace]
members = ["motor-controller", "rp2040-dshot"]
resolver = "2"
publish = false

[workspace.dependencies]
defmt-rtt = "1.1.0"
defmt = "1.0.1"
embassy-rp = { version = "0.9.0", features = [
  "rp2040",
  "critical-section-impl",
  "defmt",
  "time-driver",
] }
embassy-time = { version = "0.5.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-executor = { version = "0.9.1", features = [
  "defmt",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
] }
thiserror-no-std = "2.0.2"
embassy-sync = "0.7.2"
static_cell = "2.1.1"
portable-atomic = "1.11.1"
pastey = "0.2.0"


[profile.release]
lto = "fat"
incremental = true
opt-level = "s"
codegen-units = 1
debug = true