[package]
name = "rp2040-dshot"
version = "0.0.1"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["Alachie Yeager"]
description = "DShot protocol implementation for RP2040 using PIO"
keywords = ["embedded", "rp2040", "dshot", "esc", "pio"]
categories = ["embedded", "no-std"]

[dependencies]
embassy-rp = { workspace = true }
embassy-time = { workspace = true }
defmt = { workspace = true }
static_cell = { workspace = true }
portable-atomic = { workspace = true }
embassy-sync = { workspace = true }
embassy-executor = { workspace = true }
pastey = { workspace = true }
pio = "0.3.0"
thiserror-no-std = "2.0.2"
num_enum = { version = "0.7.5", default-features = false }


[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
portable-atomic = { version = "1.1.1", features = ["unsafe-assume-single-core"] }