[package]
name = "rp2040-dshot"
version = "0.0.3"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["Alachie Yeager"]
description = "DShot protocol implementation for RP2040 using PIO"
keywords = ["embedded", "rp2040", "dshot", "esc", "pio"]
categories = ["embedded", "no-std"]

[dependencies]
embassy-rp = { workspace = true, optional = true }
embassy-time = { workspace = true, optional = true }
defmt = { workspace = true, optional = true }
static_cell = { workspace = true, optional = true }
portable-atomic = { workspace = true, optional = true }
embassy-sync = { workspace = true, optional = true }
embassy-executor = { workspace = true, optional = true }
pastey = { workspace = true, optional = true }
pio = { version = "0.3.0", optional = true }
thiserror-no-std = "2.0.2"
num_enum = { version = "0.7.5", default-features = false }


[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
portable-atomic = { version = "1.1.1", features = [
    "unsafe-assume-single-core",
] }

[features]
default = ["driver"]
driver = [
    "embassy-rp",
    "embassy-time",
    "defmt",
    "static_cell",
    "portable-atomic",
    "embassy-sync",
    "embassy-executor",
    "pastey",
    "pio"
]
