[package]
name = "rp2040-dshot"
version = "0.0.7"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["Alachie Yeager"]
description = "DShot protocol implementation for RP2040 using PIO"
keywords = ["embedded", "rp2040", "dshot", "esc", "pio"]
categories = ["embedded", "no-std"]

[dependencies]
embassy-rp = { version = "0.9.0", optional = true, features = ["rp2040"]}
embassy-time = { version = "0.5.0", optional = true }
defmt = { version = "1.0.1", optional = true }
static_cell = { version = "2.1.1", optional = true }
portable-atomic = { version = "1.12.0", optional = true }
embassy-sync = { version = "0.7.2", optional = true }
embassy-executor = { version = "0.9.1", optional = true }
pastey = { version = "0.2.1", optional = true }
pio = { version = "0.3.0", optional = true }
thiserror-no-std = { version = "2.0.2", optional = true }
num_enum = { version = "0.7.5", default-features = false }


[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
portable-atomic = { version = "1.1.1", features = [
    "unsafe-assume-single-core",
], optional = true}

[features]
default = []
driver = [
    "dep:embassy-rp",
    "dep:embassy-time",
    "dep:static_cell",
    "dep:portable-atomic",
    "dep:embassy-sync",
    "dep:embassy-executor",
    "dep:pastey",
    "dep:pio",
]
defmt = [
    "dep:defmt",
    "embassy-sync?/defmt",
    "embassy-time?/defmt",
    "embassy-executor?/defmt"
]
defmt-logging = ["defmt"]
thiserror = ["dep:thiserror-no-std"]